kubernetes/adsb-sync-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis-server
  namespace: planespotter
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-server
        tier: backend
    spec:
      containers:
      - name: redis-server
        image: redis
        ports:
        - containerPort: 6379
      - name: telegraf
        image: puckpuck/wavefront-telegraf
        ports:
        - name: udp-statsd
          containerPort: 8125
        - name: udp-8092
          containerPort: 8092
        - name: tcp-8094
          containerPort: 8094
        resources:
          requests:
            memory: 30Mi
            cpu: 100m
          limits:
            memory: 50Mi
            cpu: 200m
        volumeMounts:
        - name: telegraf-d
          mountPath: /etc/telegraf/telegraf.d
      volumes:
      - name: telegraf-d
        projected:
          sources:
          - configMap:
              name: telegraf-redis-config 
---
apiVersion: v1
kind: Service
metadata:
  name: redis-server
  namespace: planespotter
  labels:
    app: redis-server
    tier: backend
spec:
  ports:
  - port: 6379
  selector:
    app: redis-server
    tier: backend
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: adsb-sync
  namespace: planespotter
  labels:
    app: adsb-sync
    tier: data-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adsb-sync
  template:
    metadata:
      labels:
        app: adsb-sync
    spec:
      containers:
      - name: adsb-sync
        image: yfauser/adsb-sync:1d791ea6e96eb50adb15e773d1d783f511618c97
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config-volume
          mountPath: /usr/src/app/config
      volumes:
        - name: config-volume
          configMap:
            name: adsb-sync-cfg
