kubernetes/app-server-deployment.yaml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: planespotter-app
  namespace: planespotter
  labels:
    app: planespotter
    tier: app-tier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planespotter
  template:
    metadata:
      labels:
        app: planespotter
    spec:
      containers:
      - name: planespotter
        # image: yfauser/planespotter-app-server:1508888202fc85246248c0892c0d27dda34de8e1
        image: harbor.lab.local/planespotter/app-server:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
        - name: config-volume
          configMap:
            name: planespotter-app-cfg
---
apiVersion: v1
kind: Service
metadata:
  namespace: planespotter
  name: planespotter-svc
  labels:
    app: planespotter-svc
spec:
  ports:
    # the port that this service should serve on
    - port: 80
  selector:
    app: planespotter
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: planespotter-app-ingress
  namespace: planespotter
spec:
  rules:
  - host: planespotter-api.k8slabapps.lab.local
    http:
      paths:
      - backend:
          serviceName: planespotter-svc
          servicePort: 80
